--- a/using.html
+++ b/using.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Применение</title>
+<meta charset="UTF-8">
+<title>Применение</title>
+</head>
+<body>
+  <h1>Где же применяются Мультимедиатехнологии?</h1>
+  <ol>
+<li>Образование и обучение</li>
+<li>Развлекательная индустрия: кино, игры, виртуальные туры</li>
+<li>Маркетинг и реклама: создание привлекательных рекламных материалов</li>
+<li>Бизнес и коммуникации: видеоконференции, презентации</li>
+<li>Медицина: виртуальные симуляции, диагностика с помощью мультимедийных средств</li>
+</ol>
