--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Мультимедиатехнологии</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 20px; }
-    nav { margin-bottom: 20px; }
-    nav a { margin-right: 15px; text-decoration: none; color: #007BFF; }
-    nav a:hover { text-decoration: underline; }
-  </style>
+  </head>
+<body>
+  <h1>Что же такое Мультимедиатехнологии?</h1>
+  <h2>Мультимедийные технологии — это совокупность методов и средств обработки, создания, хранения и передачи различных видов медиа‑контента, таких как аудио, видео, изображение и текст. <br>Они играют ключевую роль в современном мире, обеспечивая более увлекательное, интерактивное и эффективное взаимодействие с информацией.</h2>
+  <ul>
+<li>Цифровое видео и анимация: создание и обработка видеороликов, анимационных фильмов и интерактивных презентаций.</li>
+<li>Аудио технология: звуковое оформление, создание эффектов, обработка голосов и музыки.</li>
+<li>Обработка изображений: редактирование фотографий, графика, визуальных эффектов</li>
+</ul>
+<a href="using.html">О применении можно узнать</a>
+</body>
+</html>
